samples/_failures_safe/1761077713_76badc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cea0e7b9.c: In function ‘main’:
./samples/SAFE/__tmp_cea0e7b9.c:143:5: error: expected declaration or statement at end of input
  143 |     small.data[0][1] = 3.0;
      |     ^~~~~
